Fix headline on mobile

--- a/assets/src/scss/site.scss
+++ b/assets/src/scss/site.scss
@@ -28,6 +28,7 @@ h1, h2, h3 {
 
 h1 {
 	font-size: typescale(4);
+	white-space: nowrap;
 }
 
 h2 {
